--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-dropdown-select-list": "^1.0.21",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-paper": "^5.0.0-rc.5",
