--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "axios": "^0.27.2",
+    "base-64": "^1.0.0",
     "link": "^1.5.1",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-document-picker": "^8.1.1",
     "react-native-dropdown-select-list": "^1.0.21",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^5.0.0-rc.5",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
