--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
+    "imagekitio-react": "^1.1.1",
     "link": "^1.5.1",
     "react": "18.1.0",
     "react-native": "0.70.0",
@@ -30,7 +31,8 @@
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
