--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-document-picker": "^8.1.1",
     "react-native-dropdown-select-list": "^1.0.21",
     "react-native-elements": "^3.4.2",
+    "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^5.0.0-rc.5",
